--- a/challenge/public/index.html
+++ b/challenge/public/index.html
@@ -103,7 +103,6 @@
             return saveProgress(scrollPosition)
         }
 
-
         let isRead = false
         let oldScrollTop = 0
         let processScroll = () => {
@@ -113,13 +112,10 @@
                 scrollBottom = (docElem['scrollHeight'] || docBody['scrollHeight']) - window.innerHeight,
                 scrollPercent = scrollTop / scrollBottom * 100 + '%'
 
-            console.log(scrollTop + ' / ' + scrollBottom + ' / ' + scrollPercent)
+            //console.log(scrollTop + ' / ' + scrollBottom + ' / ' + scrollPercent)
 
             if (oldScrollTop + 50 < scrollTop) {
-                console.log("meep")
-                    //saveProgress(scrollTop)
                 fetch("http://localhost:8087/api/progress/" + scrollTop)
-
                 oldScrollTop = scrollTop
             }
 
@@ -162,15 +158,10 @@
                 })
         }
 
-        let saveProgress = (progress) => {
-            fetch("http://localhost:8087/api/progress/" + progress)
-
-        }
-
         let calcReadingTime = (milli) => {
             let totalReadingTime = milli - startTimestamp
             let hour = Math.floor(totalReadingTime / 3600)
-            let min = Math.floor((totalReadingTime - hour) / 60)
+            let min = Math.floor(((totalReadingTime - hour) / 60) % 60)
             let sec = Math.floor((totalReadingTime - hour - min) % 60)
 
             console.log("You spend " + hour + " hours, " + min + " minutes and " + sec + " seconds reading this article.")
