Improving readability of article

--- a/challenge/public/index.html
+++ b/challenge/public/index.html
@@ -52,7 +52,7 @@
             margin: auto;
             padding: 1rem;
             align-items: center;
-            width: 75%;
+            width: 65ch;
             border-left: 3px solid black;
         }
         
